ensure no skinny template-x cards appear on hover on mobile

--- a/express/blocks/shared/basic-carousel.css
+++ b/express/blocks/shared/basic-carousel.css
@@ -181,6 +181,7 @@ main .basic-carousel-container .basic-carousel-platform .basic-carousel-right-tr
 
 main .template-x.basic-carousel .basic-carousel-container .template.basic-carousel-element .button-container.singleton-hover {
   height: 362px;
+  width: 226px;
 }
 
 main .template-x.basic-carousel .basic-carousel-container .template.basic-carousel-element .button-container {
